--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
 body{
-    background-color:#1F439F <title>Document</title>
-    <link rel=”stylesheet” href=”style.css”>
+    background-color:#0E1769   
 }
